--- a/src/xuat/xuat.html
+++ b/src/xuat/xuat.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-6 main xuat">
             
-            <a href="#"><h1>Xuất thành phẩm</h1></a>
+            <a href="tpxuat.html"><h1>Xuất thành phẩm</h1></a>
         </div>
         
     </div>
