--- a/src/nhap/chinhsua/cslk.html
+++ b/src/nhap/chinhsua/cslk.html
@@ -123,8 +123,9 @@
                 var thanhtien = $('<p></p>').html('Thành tiền: ' + doc.thanhtien);
 
                 var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                var butto = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
-                block.append(button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
+                block.append(butto, button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
                 box.append(block);
             });
         }
