--- a/src/nhap/chinhsua/cstp.html
+++ b/src/nhap/chinhsua/cstp.html
@@ -118,8 +118,9 @@
                 var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
                 var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
+                var butto = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
-                block.append(button, tenhang, mcu, sohopdong, chip, date, quantity);
+                block.append(butto, button, tenhang, mcu, sohopdong, chip, date, quantity);
                 box.append(block);
             });
         }
