--- a/src/nhap/chinhsua/cslk.html
+++ b/src/nhap/chinhsua/cslk.html
@@ -123,7 +123,7 @@
                 var thanhtien = $('<p></p>').html('Thành tiền: ' + doc.thanhtien);
 
                 var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
-                var butto = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
+                var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
                 box.append(block);
@@ -134,6 +134,10 @@
         function redirect(id) {
             ipcRenderer.send('edit-send', {type: 'linhkien', id: id});
             location.href='../lknhap.html';
+        }
+        function redirect1(id) {
+            ipcRenderer.send('xoa-nhap-linhkien', id);
+            location.href='./cstp.html';
         }
 
         // Option All
