--- a/src/nhap/chinhsua/cstp.html
+++ b/src/nhap/chinhsua/cstp.html
@@ -118,7 +118,7 @@
                 var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
                 var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
-                var butto = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
+                var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, mcu, sohopdong, chip, date, quantity);
                 box.append(block);
@@ -129,6 +129,10 @@
         function redirect(id) {
             ipcRenderer.send('edit-send', {type: 'thanhpham', id: id});
             location.href='../tpnhap.html';
+        }
+        function redirect1(id) {
+            ipcRenderer.send('xoa-nhap-thanhpham', id);
+            location.href='./cstp.html';
         }
 
         // Option All
