--- a/src/nhap/tpnhap.html
+++ b/src/nhap/tpnhap.html
@@ -117,13 +117,12 @@
             var obj = prepareObj();
             if (form.id == "save") {
                 ipcRenderer.send('save-thanhpham', obj);
-                return true;
+                form.submit();
             } 
             if (form.id == "edit") {
                 obj.id = document.getElementById('_id').value;
                 var canSubmit = ipcRenderer.sendSync('edit-nhap-thanhpham', obj);
                 if (canSubmit) { form.action = "./chinhsua/cstp.html"; form.submit(); }
-                else return false;
             }
         }
     </script>
