--- a/src/xuat/chinhsua/cslk.html
+++ b/src/xuat/chinhsua/cslk.html
@@ -122,7 +122,7 @@
                 var dongia = $('<p></p>').html('Đơn giá: ' + doc.dongia);
                 var thanhtien = $('<p></p>').html('Thành tiền: ' + doc.thanhtien);
                 var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
-                var butto = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
+                var butto = $(`<button onclick="redirect1('${doc.id}')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
 
                 block.append(butto, button, tenhang, partnum, sohopdong, sanpham, cty, date, dvtinh, quantity, dongia, thanhtien);
                 box.append(block);
@@ -133,6 +133,11 @@
         function redirect(id) {
             ipcRenderer.send('edit-send', {type: 'linhkien', id: id});
             location.href='../lkxuat.html';
+        }
+        // Reload the page
+        function redirect1(id) {
+            ipcRenderer.send('xoa-xuat-linhkien', id);
+            location.href='./cslk.html';
         }
 
         // Option All
