--- a/src/kx/tpkx.html
+++ b/src/kx/tpkx.html
@@ -28,7 +28,7 @@
     </nav>
     <form action="" style="margin-left: 5vw;" onsubmit="return processName()">
         <label for="type" >Chọn hình thức kết xuất</label>
-        <select name="type" style="margin-left: 15px;" id="type" onchange="myFunction()">
+        <select name="type" style="margin-left: 15px;" id="type" onchange="myFunction(); processAll()">
             <option value="date">Ngày</option>
             <option value="name">Sản phẩm</option>
             <option value="all">Tất cả</option>
@@ -52,7 +52,7 @@
 
         <div class="col-6" id="xuat">
             <h1 style="text-align: center;">Xuất</h1> -->
-        <button style="display: flex; margin-left: auto; margin-right: auto; align-items: center; justify-content: center; margin-top: 50px; height: 50px; width: 250px; text-align: center; background-color: rgb(49, 197, 49);">Xuất file excel</button>
+        <button onclick="exportExcel()" style="display: flex; margin-left: auto; margin-right: auto; align-items: center; justify-content: center; margin-top: 50px; height: 50px; width: 250px; text-align: center; background-color: rgb(49, 197, 49);">Xuất file excel</button>
 
 
     </div>
@@ -102,52 +102,29 @@
 
         //include electron package
         const {ipcRenderer} = require('electron');
-        var docs;
-        function print() {
-            var box = $('#nhap');
-            $('#nhap div').remove();
-            docs.nhap.forEach(doc => {
-                var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
-                var mcu = $('<p></p>').html('MCU: ' + doc.mcu);
-                var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
-                var chip = $('<p></p>').html('Chip: ' + doc.chip);
-                var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
-                var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
-
-                block.append(tenhang, mcu, sohopdong, chip, date, quantity);
-                box.append(block);
-            });
-
-            box = $('#xuat');
-            $('#xuat div').remove();
-            docs.xuat.forEach(doc => {
-                var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
-                var mcu = $('<p></p>').html('MCU: ' + doc.mcu);
-                var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
-                var chip = $('<p></p>').html('Chip: ' + doc.chip);
-                var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
-                var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
-
-                block.append(tenhang, mcu, sohopdong, chip, date, quantity);
-                box.append(block);
-            });
+        var nhaps, xuats;
+        function processAll() {
+            if (select.value === 'all') {
+                nhaps = ipcRenderer.sendSync('doc-nhap-thanhpham-all', {});
+                xuats = ipcRenderer.sendSync('doc-xuat-thanhpham-all', {});
+            }
         }
         function processDate() {
             var datestart = document.getElementById('datestart').value;
             var dateend = document.getElementById('dateend').value;
             if (datestart != '' && dateend != '') {
-                docs = ipcRenderer.sendSync('kxuat-thanhpham-ngay', {datestart, dateend});
-                print()
+                nhaps = ipcRenderer.sendSync('doc-nhap-thanhpham-ngay', {datestart, dateend});
+                xuats = ipcRenderer.sendSync('doc-xuat-thanhpham-ngay', {datestart, dateend});
             }
         }
-
         function processName() {
             var name = document.getElementById('nameinp').value;
-            docs = ipcRenderer.sendSync('kxuat-thanhpham-ten', {name});
-            print();
+            nhaps = ipcRenderer.sendSync('doc-nhap-thanhpham-ten', {name});
+            xuats = ipcRenderer.sendSync('doc-xuat-thanhpham-ten', {name});
             return false;
+        }
+        function exportExcel() {
+            ipcRenderer.send('excel-thanhpham', [nhaps, xuats]);
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
