--- a/src/nhap/chinhsua/cslk.html
+++ b/src/nhap/chinhsua/cslk.html
@@ -137,7 +137,7 @@
         }
         function redirect1(id) {
             ipcRenderer.send('xoa-nhap-linhkien', id);
-            location.href='./cstp.html';
+            location.href='./cslk.html';
         }
 
         // Option All
