--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -96,8 +96,8 @@
                 date: date,
                 dvtinh: dvtinh,
                 quantity: parseInt(quantity, 10),
-                dongia: dongia,
-                thanhtien: thanhtien,
+                dongia: parseInt(dongia, 10),
+                thanhtien: parseInt(thanhtien, 10),
                 state: 'nhap'
             }
             return obj;
@@ -137,10 +137,10 @@
                 <input type="number" class="form-control" id="quantity" placeholder="Số lượng" value="${doc.quantity.toString()}" required>
 
                 <label for="dongia">Đơn giá</label>
-                <input type="number" class="form-control" id="dongia" placeholder="Đơn giá" value="${doc.dongia}" required>
+                <input type="number" class="form-control" id="dongia" placeholder="Đơn giá" value="${doc.dongia.toString()}" required>
                 
                 <label for="thanhtien">Thành tiền</label>
-                <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" value="${doc.thanhtien}" required>
+                <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" value="${doc.thanhtien.toString()}" required>
                 <div class="form-group row" style="margin: 30px 0;">
                     <input id="sbm-btn" type="submit" value="Thêm" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
                     <button class="col-6 form-control" onclick="location.href='nhap.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
