--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -94,8 +94,8 @@
                 date: date,
                 dvtinh: dvtinh,
                 quantity: parseInt(quantity, 10),
-                dongia: dongia,
-                thanhtien: thanhtien,
+                dongia: parseInt(dongia, 10),
+                thanhtien: parseInt(thanhtien, 10),
                 state: 'xuat'
             }
             return obj;
@@ -135,10 +135,10 @@
                 <input type="number" class="form-control" id="quantity" placeholder="Số lượng" value="${doc.quantity.toString()}" required>
 
                 <label for="dongia">Đơn giá</label>
-                <input type="number" class="form-control" id="dongia" placeholder="Đơn giá" value="${doc.dongia}" required>
+                <input type="number" class="form-control" id="dongia" placeholder="Đơn giá" value="${doc.dongia.toString()}" required>
                 
                 <label for="thanhtien">Thành tiền</label>
-                <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" value="${doc.thanhtien}" required>
+                <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" value="${doc.thanhtien.toString()}" required>
             `)
             form.append(formContent);
         })
