--- a/src/xuat/chinhsua/cs.html
+++ b/src/xuat/chinhsua/cs.html
@@ -32,13 +32,13 @@
         <div class="col-6 main nhap">
 
             <a href="cslk.html">
-                <h1>Chỉnh sửa nhập linh kiện, <br>vật tư</h1>
+                <h1>Chỉnh sửa xuất linh kiện, <br>vật tư</h1>
             </a>
 
         </div>
         <div class="col-6 main xuat">
             
-            <a href="cstp.html"><h1> Chỉnh sửa nhập thành phẩm</h1></a>
+            <a href="cstp.html"><h1> Chỉnh sửa xuất thành phẩm</h1></a>
         </div>
 
         
