--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -104,11 +104,12 @@
 
         //include electron package
         const {ipcRenderer} = require('electron');
-        var nhaps, xuats;
+        var nhaps, xuats, tons;
         function processAll() {
             if (select.value === 'all') {
                 nhaps = ipcRenderer.sendSync('doc-nhap-linhkien-all', {});
                 xuats = ipcRenderer.sendSync('doc-xuat-linhkien-all', {});
+                tons = undefined;
             }
         }
         function processDate() {
@@ -117,16 +118,18 @@
             if (datestart != '' && dateend != '') {
                 nhaps = ipcRenderer.sendSync('doc-nhap-linhkien-ngay', {datestart, dateend});
                 xuats = ipcRenderer.sendSync('doc-xuat-linhkien-ngay', {datestart, dateend});
+                tons = undefined;
             }
         }
         function processName() {
             var name = document.getElementById('nameinp').value;
             nhaps = ipcRenderer.sendSync('doc-nhap-linhkien-ten', {name});
             xuats = ipcRenderer.sendSync('doc-xuat-linhkien-ten', {name});
+            tons = ipcRenderer.sendSync('doc-ton-linhkien', {name});
             return false;
         }
         function exportExcel() {
-            ipcRenderer.send('excel-linhkien', [nhaps, xuats]);
+            ipcRenderer.send('excel-linhkien', [nhaps, xuats, tons]);
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
