--- a/src/xuat/xuat.html
+++ b/src/xuat/xuat.html
@@ -32,13 +32,13 @@
         <div class="col-4 main nhap">
 
             <a href="lkxuat.html">
-                <h1>Nhập linh kiện, <br>vật tư</h1>
+                <h1>Xuất linh kiện, <br>vật tư</h1>
             </a>
 
         </div>
         <div class="col-4 main xuat">
             
-            <a href="tpxuat.html"><h1>Nhập thành phẩm</h1></a>
+            <a href="tpxuat.html"><h1>Xuất thành phẩm</h1></a>
         </div>
         <div class="col-4 main kx">
             
