--- a/src/nhap/chinhsua/cstp.html
+++ b/src/nhap/chinhsua/cstp.html
@@ -138,7 +138,7 @@
         // Option All
         function processAll() {
             if (select.value == 'all') {
-                docs = ipcRenderer.sendSync('doc-nhap-linhkien-all', {});
+                docs = ipcRenderer.sendSync('doc-nhap-thanhpham-all', {});
                 print();
             }
         }
