--- a/src/xuat/chinhsua/cslk.html
+++ b/src/xuat/chinhsua/cslk.html
@@ -143,7 +143,7 @@
         // Option All
         function processAll() {
             if (select.value == 'all') {
-                docs = ipcRenderer.sendSync('doc-nhap-linhkien-all', {});
+                docs = ipcRenderer.sendSync('doc-xuat-linhkien-all', {});
                 print();
             }
         }
