--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -111,7 +111,7 @@
 
             tons.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
+                var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
                 var dvtinh = $('<p></p>').html('Đơn vị tính: ' + doc.dvtinh);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
 
