--- a/src/kx/tpkx.html
+++ b/src/kx/tpkx.html
@@ -110,11 +110,10 @@
 
             tons.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
-                var dvtinh = $('<p></p>').html('Đơn vị tính: ' + doc.dvtinh);
+                var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
 
-                block.append(tenhang, dvtinh, quantity);
+                block.append(tenhang, quantity);
                 box.append(block);
             });
         }
