--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -57,7 +57,7 @@
             <input type="number" class="form-control" id="dongia" placeholder="Đơn giá">
             
             <label for="thanhtien">Thành tiền</label>
-            <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền">
+            <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" disabled>
 
         </form>
 
@@ -73,6 +73,14 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script>
+        var thanhtien = document.getElementById('thanhtien').value;
+        var formChange = document.querySelector('form')
+        formChange.addEventListener('change', (e) => {
+            thanhtien = document.getElementById('dongia').value *document.getElementById('quantity').value 
+            // document.getElementById('thanhtien').placeholder = document.getElementById('dongia').value *document.getElementById('quantity').value
+            document.getElementById('thanhtien').placeholder = thanhtien;
+        })
+
         function prepareObj() {
             const tenhang = document.getElementById('tenhang').value;
             const partnum = document.getElementById('partnum').value;
@@ -83,7 +91,6 @@
             const dvtinh = document.getElementById('dvtinh').value;
             const quantity = document.getElementById('quantity').value;
             const dongia = document.getElementById('dongia').value;
-            const thanhtien = document.getElementById('thanhtien').value;
 
             const obj = {
                 tenhang: tenhang,
@@ -138,7 +145,7 @@
                 <input type="number" class="form-control" id="dongia" placeholder="Đơn giá" value="${doc.dongia.toString()}" required>
                 
                 <label for="thanhtien">Thành tiền</label>
-                <input type="number" class="form-control" id="thanhtien" placeholder="Thành tiền" value="${doc.thanhtien.toString()}" required>
+                <input type="number" class="form-control" id="thanhtien" placeholder="${doc.thanhtien.toString()}" disabled>
             `)
             form.append(formContent);
         })
