Fix bug relating to thanhtien in nhap,xuat

--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -148,6 +148,8 @@
                 <input type="number" class="form-control" id="thanhtien" placeholder="${doc.thanhtien.toString()}" disabled>
             `)
             form.append(formContent);
+
+            thanhtien = doc.thanhtien.toString();
         })
 
         function process() {
