--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -152,6 +152,8 @@
                 <input type="number" class="form-control" id="thanhtien" placeholder="${doc.thanhtien.toString()}" disabled> 
             `)
             form.append(formContent);
+
+            thanhtien = doc.thanhtien.toString();
         })
 
         function process() {
