Fix bug when edit name in nhap,xuat

--- a/src/nhap/chinhsua/cstp.html
+++ b/src/nhap/chinhsua/cstp.html
@@ -111,7 +111,7 @@
             $('#nhap div').remove();
             docs.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
+                var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
                 var mcu = $('<p></p>').html('MCU: ' + doc.mcu);
                 var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
                 var chip = $('<p></p>').html('Chip: ' + doc.chip);
