--- a/src/xuat/chinhsua/cslk.html
+++ b/src/xuat/chinhsua/cslk.html
@@ -111,7 +111,7 @@
             $('#xuat div').remove();
             docs.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Ten hang: ' + doc.tenhang);
+                var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
                 var partnum = $('<p></p>').html('Mã: ' + doc.partnum);
                 var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
                 var sanpham = $('<p></p>').html('Sản phẩm: ' + doc.sanpham);
