--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -156,8 +156,8 @@
             const form = document.querySelector('form');
             var obj = prepareObj();
             if (form.id == "save") {
-                ipcRenderer.send('xuat-linhkien', obj);
-                form.submit();
+                var canSubmit = ipcRenderer.sendSync('xuat-linhkien', obj);
+                if (canSubmit) form.submit();
             } 
             if (form.id == "edit") {
                 obj.id = document.getElementById('_id').value;
