--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -116,8 +116,8 @@
             const form = document.querySelector('form');
             var obj = prepareObj();
             if (form.id == "save") {
-                ipcRenderer.send('xuat-thanhpham', obj);
-                form.submit();
+                var canSubmit = ipcRenderer.sendSync('xuat-thanhpham', obj);
+                if (canSubmit) form.submit();
             } 
             if (form.id == "edit") {
                 obj.id = document.getElementById('_id').value;
